--- a/template/post.html
+++ b/template/post.html
@@ -7,6 +7,11 @@
 	<body>
 		<main>
 		<h1>{{.Title}}</h1>
+		<section>
+			<ul>
+				<li>Updated {{.ModTime.Format "2 January at 3:04pm"}}</li>
+			</ul>
+		</section>
 		<article>
 			{{.Content}}
 		</article>
