--- a/template/post.html
+++ b/template/post.html
@@ -8,7 +8,7 @@
 	<body>
 		<main>
 		<a href="/">Index</a>
-		<h1>{{.Title}}</h1>
+		<h1 class="title">{{.Title}}</h1>
 		<section>
 			<ul>
 				<time>Updated {{.ModTime.Format "January 2, 2006"}}</time>
