--- a/template/index.html
+++ b/template/index.html
@@ -14,7 +14,7 @@
 		<ul>
 			{{range $index, $page := .Pages}}
 			<li>
-				<time>{{ $page.ModTime.Format "January 2" }}</time>
+				<time>{{ $page.BirthTime.Format "January 2" }}</time>
 				<a href="{{$page.RelativeLink}}">{{ $page.Title }}</a>
 			</li>
 			{{else}}<li>No posts.</li>{{end}}
