--- a/template/post.html
+++ b/template/post.html
@@ -11,7 +11,7 @@
 		<h1 class="title">{{.Title}}</h1>
 		<section>
 			<ul>
-				<time>Updated {{.ModTime.Format "January 2, 2006"}}</time>
+				<time>{{.BirthTime.Format "January 2, 2006"}}</time>
 			</ul>
 		</section>
 		<article>
