--- a/template/post.html
+++ b/template/post.html
@@ -11,7 +11,8 @@
 		<h1 class="title">{{.Title}}</h1>
 		<section>
 			<ul>
-				<time>{{.BirthTime.Format "January 2, 2006"}}</time>
+				<li><time>{{.BirthTime.Format "January 2, 2006"}}</time></li>
+				<li>Readability: <span id="readability"></span></li>
 			</ul>
 		</section>
 		<article>
