--- a/template/post.html
+++ b/template/post.html
@@ -12,7 +12,7 @@
 		<section>
 			<ul>
 				<li><time>{{ .BirthTime.Format "January 2, 2006" }}</time></li>
-				<li><a href="https://en.wikipedia.org/wiki/Flesch–Kincaid_readability_tests#Kincaid_grade_level">Readability</a>: {{ .FleschKinkaid }}</li>
+				<li><a href="https://en.wikipedia.org/wiki/Flesch–Kincaid_readability_tests#Flesch.E2.80.93Kincaid_grade_level">Readability</a>: {{ .FleschKinkaid }}</li>
 			</ul>
 		</section>
 		<article>
