Add word-wrap:break-word property to article tag

--- a/template/css/default.css
+++ b/template/css/default.css
@@ -38,8 +38,13 @@ footer {
 	font-size: 1.2em;
 }
 
-img, video {
+img, 
+video {
 	width: 100%;
+}
+
+article {
+	word-wrap: break-word;
 }
 
 time, 
