Make index hyperlink point to root

--- a/template/post.html
+++ b/template/post.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<main>
-		<a href=".">Index</a>
+		<a href="/">Index</a>
 		<h1 class="title">{{.Title}}</h1>
 		<section>
 			<ul>
