Change relative links from root- to base-relative

--- a/template/post.html
+++ b/template/post.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="../css/style.css">
 		<title>{{.Title}}</title>
 	</head>
 	<body>
 		<main>
-		<a href="/">Index</a>
+		<a href="../">Index</a>
 		<h1 class="title">{{.Title}}</h1>
 		<section>
 			<ul>
