Make next post link relative to base dir

--- a/template/post.html
+++ b/template/post.html
@@ -20,7 +20,7 @@
 		</article>
 		<footer>
 		{{if .Next}}
-			<a href="{{.Next.RelativeLink}}">Next Post</a>
+			<a href="../{{.Next.RelativeLink}}">Next Post</a>
 		{{end}}
 		</footer>
 		</main>
