Add apb icon with w3 favicon rel profile to default index.html template

--- a/template/index.html
+++ b/template/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<head profile="http://www.w3.org/2005/10/profile">
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="./css/style.css">
 		<title>{{.Title}}</title>
+
+		<link rel="icon" 
+		      type="image/png" 
+		      href="https://i.imgur.com/BePVFjT.png">
 	</head>
 	<body>
 		<main>
