--- a/template/index.html
+++ b/template/index.html
@@ -8,6 +8,8 @@
 		<link rel="icon" 
 		      type="image/png" 
 		      href="https://i.imgur.com/BePVFjT.png">
+		<link rel="apple-touch-icon"
+		      href="https://i.imgur.com/BePVFjT.png">
 	</head>
 	<body>
 		<main>
