Remove intermediary HTML template

--- a/template/post.html
+++ b/template/post.html
@@ -16,7 +16,7 @@
 			</ul>
 		</section>
 		<article>
-			{{template "post_content" .}}
+			{{ .Content }}
 		</article>
 		<footer>
 		{{if .Next}}
