--- a/template/index.html
+++ b/template/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head profile="http://www.w3.org/2005/10/profile">
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="./css/style.css">
 		<title>{{.Title}}</title>
 
